2002-03-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Fixed a bug in the range normalization code.
	Thanks to Joey Seek <joeyseek@hotmail.com>.

	* lib/error.c: When a severe error occurs (severity <= 0), it is
	now the default error handler that terminates the process by exit().
	This means that an application now has the chance to install its
	own error handler and call any cleanup code even in case of severe
	errors. [Sorry, Dave, that it took sooo long to do this change.]

	* libsmi-0.3.1.tar.gz: released version 0.3.1.

2002-02-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added checks for appropriate nodekinds
	of each node's parent node.

2002-01-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: Removed a misplaced `static' keyword from the
	generated code. Thanks to Brian Remick <remick@cs.utah.edu>.

2002-01-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/DISMAN-SCHEDULE-MIB: updated (RFC 3231).

2002-01-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed segfault on illegal VARIABLES in
	SMIv1 TRAPs. Thanks to <hanule@3ic.co.kr>. Sorry, I cannot determine
	your name in ISO-8859-1. ;-)

	* smi/util.c: Fixed type derivation checks used for TDomain/TAddress
	and InetAddressType/InetAddress checks.

	* tools/dump-xml.c: Added switches to turn DOCTYPE and XML Schema
	specs off.

2002-01-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/CIRCUIT-IF-MIB: added (RFC 3201).

	* mibs/ietf/FRSLD-MIB: added (RFC 3202).

	* tools/smidiff.c: Fixed warning messages on group membership
	changes. Thanks to Bill.
	
2001-12-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-perl.c: Martin Schulz submitted a patch to fix
	the representation of notifications.
	
2001-12-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added check for incompatible types in SEQUENCE
	item and object type definition. Thanks to Vivekanandan.V
	<vivekav@future.futsoft.com>.
